Add missing unit

--- a/tex/electronicsBJT.tex
+++ b/tex/electronicsBJT.tex
@@ -2796,7 +2796,7 @@ v_{BE}&=\SI{0.1}{\volt}
 \end{align*}
 لکھا جا سکتا ہے۔یوں 
 \begin{align*}
-i_C=0.04 \times 0.1=\SI{4}{\milli }
+i_C=0.04 \times 0.1=\SI{4}{\milli \ampere}
 \end{align*}
 حاصل ہوتا ہے جسے استعمال کرتے ہوئے
 \begin{align*}
