Minor modification to allow compilation

--- a/tex/khalidUrduBooksElectronics.sty
+++ b/tex/khalidUrduBooksElectronics.sty
@@ -42,9 +42,10 @@
 
 
 \newfontfamily\arabicfont[Scale=1.0,Script=Arabic]{Scheherazade}
+\let\arabicfonttt\ttfamily
 \newfontfamily\urdufont[Scale=1.0,Script=Arabic]{XB Tabriz}
 
-\newfontfamily\AcaciasHand{AcaciasHand}
+%\newfontfamily\AcaciasHand{AcaciasHand}
 
 \setcounter{secnumdepth}{3} 
 
