Switch to Jameel Noori Nastaleeq

--- a/tex/khalidUrduBooksElectronics.sty
+++ b/tex/khalidUrduBooksElectronics.sty
@@ -7,7 +7,7 @@
 \usepackage{bm}											%bold greek letters too
 \usepackage{lineno}										%line numbers in pdf
 \usepackage{graphics}
-\usepackage[]{graphicx} 
+\usepackage[]{graphicx}
 \usepackage{cancel}
 \usepackage{mathpazo}
 \usepackage{booktabs}                                  %for tables toprule, midrule and bottomrule
@@ -22,16 +22,17 @@
 
 
 \usepackage{geometry}                        %the geometry package gives correct page size in pdf meta data i.e. pdf file properties
-%\pdfpagewidth=\paperwidth              %instead of the geometry package, could have used these two lines      
+%\pdfpagewidth=\paperwidth              %instead of the geometry package, could have used these two lines
 %\pdfpageheight=\paperheight
 
 % \usepackage{microtype}               %underfull messages try using it if needed. check first if it works with xelatex
 
-\usepackage{makeidx}                %  \makeindex 
+\usepackage{makeidx}                %  \makeindex
 \usepackage{placeins}                   % \FloatBarrier
 
 %\usepackage{hyperref}                   %loaded second last just before polyglossia. still giving problems
 \usepackage{polyglossia}                %is loaded the last
+\usepackage{setspace}
 
 %\renewcommand\thelinenumber{\textenglish{\arabic{linenumber}}}
 %\linenumbers												%for line numbers in pdf
@@ -41,11 +42,21 @@
 \setotherlanguages{english}
 
 
-\newfontfamily\arabicfont[Scale=1.0,Script=Arabic]{Scheherazade}
+% \newfontfamily\arabicfont[Scale=1.0,Script=Arabic]{Scheherazade}
+\newfontfamily\arabicfont[Scale=1.25,WordSpace=6.0,Script=Arabic]{Jameel Noori Nastaleeq}
 \let\arabicfonttt\ttfamily
-\newfontfamily\urdufont[Scale=1.0,Script=Arabic]{XB Tabriz}
+% \newfontfamily\urdufont[Scale=1.0,Script=Arabic]{XB Tabriz}
+\newfontfamily\urdufont[Scale=1.25,WordSpace=6.0,Script=Arabic]{Jameel Noori Nastaleeq}
 
-%\newfontfamily\AcaciasHand{AcaciasHand}
+\setlength{\parskip}{5mm plus4mm minus3mm}
 
-\setcounter{secnumdepth}{3} 
+\setstretch{2}
 
+\let\myeverypar\everypar
+\newtoks\everypar
+\everypar\expandafter{\the\myeverypar}
+\myeverypar{\the\everypar\beginR}
+
+% \newfontfamily\AcaciasHand{AcaciasHand}
+
+\setcounter{secnumdepth}{3}
