--- a/tex/myUrduCommandsElectronics.tex
+++ b/tex/myUrduCommandsElectronics.tex
@@ -21,7 +21,7 @@
 \providecommand*{\ابتدا}[1]{\begin{#1}}
 \providecommand*{\انتہا}[1]{\end{#1}}
 
-%include and input directives for adding external files into the main document 
+%include and input directives for adding external files into the main document
 \newcommand*{\بشمول}[1]{\includeonly{#1}}
 \newcommand*{\شامل}[1]{\include{#1}}
 \newcommand*{\داخل}[1]{\input{#1}}
@@ -44,7 +44,7 @@
 %counters
 \newcommand*{\فاصلہ}{\vspace*{10mm}}
 
-%itemize, bullets and numbered items   
+%itemize, bullets and numbered items
 \newcommand*{\اشیاء}{itemize}                               %used in   \begin{itemize}
 \newcommand*{\شے}[1]{\item {#1}}			%used in    \item
 
@@ -64,12 +64,12 @@
 %================================
 
 %numbering scheme
-\renewcommand*{\thefigure}{\arabic{figure}.\thechapter}
-\renewcommand*{\thetable}{\arabic{table}.\thechapter}
-\renewcommand*{\theequation}{\arabic{equation}.\thechapter}
-\renewcommand*{\thesection}{\arabic{section}.\thechapter}
-\renewcommand*{\thesubsection}{\arabic{subsection}.\arabic{section}.\thechapter}
-\renewcommand*{\thesubsubsection}{\arabic{subsubsection}.\arabic{subsection}.\arabic{section}.\thechapter}
+\renewcommand*{\thefigure}{\thechapter.\arabic{figure}}
+\renewcommand*{\thetable}{\thechapter.\arabic{table}}
+\renewcommand*{\theequation}{\thechapter.\arabic{equation}}
+\renewcommand*{\thesection}{\thechapter.\arabic{section}}
+\renewcommand*{\thesubsection}{\thesection.\arabic{subsection}}
+\renewcommand*{\thesubsubsection}{\thesubsection.\arabic{subsubsection}}
 
 %================
 %my environments
@@ -99,6 +99,6 @@
 \newcounter{questioncounter}[chapter]
 \renewcommand{\thequestioncounter}{\arabic{questioncounter}.\thechapter}
 
-\newenvironment*{سوال}				
+\newenvironment*{سوال}
 {\noindent\ignorespaces  سوال \refstepcounter{questioncounter} \thequestioncounter :}%
 {\par\noindent }
