Reduce margins of book

--- a/tex/khalidUrduBooksElectronics.sty
+++ b/tex/khalidUrduBooksElectronics.sty
@@ -21,7 +21,7 @@
 \usepackage[version=3]{mhchem}     %chemical symbols such as \ce{H2O}
 
 
-\usepackage{geometry}                        %the geometry package gives correct page size in pdf meta data i.e. pdf file properties
+\usepackage[top=1in,bottom=1in,left=0.8in,right=1.2in,asymmetric,twoside]{geometry}                        %the geometry package gives correct page size in pdf meta data i.e. pdf file properties
 %\pdfpagewidth=\paperwidth              %instead of the geometry package, could have used these two lines
 %\pdfpageheight=\paperheight
 
