--- a/tex/electronicsPreface.tex
+++ b/tex/electronicsPreface.tex
@@ -4,7 +4,16 @@
 
 یہ کتاب \تحریر{Ubuntu} استعمال  کرتے ہوئے \تحریر{XeLatex} میں تشکیل دی گئی۔پرزہ جات کے خط \تحریر{Octave} جبکہ ادوار کو \تحریر{gEDA} کی مدد سے بنایا گیا ہے۔ کئی ادوار پر \تحریر{GnuCap} کی مدد سے غور کیا گیا۔میں ان سافٹ ویر لکھنے والوں کا دل سے شکر گزار ہوں۔میں طلبہ و طالبات سے گزارش  کرتا ہوں کہ وہ آگے بڑھیں اور اس قسم کے سافٹ ویر لکھیں یا ان کا ترجمہ علاقائی زبانوں میں کریں۔
 
-میں یہاں ان تمام خواتین و حضرات کا شکریہ ادا کرنا چاہتا ہوں جنہوں نے اس کتاب کے مکمل ہونے میں میری مدد کی۔ 
+میں یہاں ان تمام خواتین و حضرات کا شکریہ ادا کرنا چاہتا ہوں جنہوں نے اس کتاب کے مکمل ہونے میں میری مدد کی, بالخصوص میرے شاگرد سید زین عباس جنہون نے اس کتاب کی درستگی میں مدد کی اور کامسیٹس میں میرے ساتھی ڈاکٹر عابد مجتبےٖ جنہوں نے کتاب کی شکل نکھاری۔
+
+اس کتاب کی تشکیل میں ہر موڑ پر کئی کتابوں کا سہارا لیا گیا۔ ان میں مندرجہ ذیل کا ذکر ضروری ہے۔
+
+\begin{itemize}
+   \setlength\itemsep{-1em}
+   \item {\textit{Electronic Circuits} by Schilling \& Belove}
+   \item {\textit{Integrated Electronics} by Millman \& Halkias}
+   \item {\textit{Microelectronic Circuits} by Sedra \& Smith}
+\end{itemize}
 
 آپ سے التماس ہے کہ اس کتاب کو زیادہ سے زیادہ طلبہ و طالبات تک پہنچائیں اور اس میں غلطیوں کی نشاندہی میرے ای میل پتہ پر کریں۔
 \vspace{5mm}
