Comment commands that create problems with pure english paragraphs

--- a/tex/khalidUrduBooksElectronics.sty
+++ b/tex/khalidUrduBooksElectronics.sty
@@ -49,11 +49,11 @@
 
 \setstretch{2}
 
-\let\myeverypar\everypar
-\newtoks\everypar
-\everypar\expandafter{\the\myeverypar}
-\myeverypar{\the\everypar\beginR}
-
+% \let\myeverypar\everypar
+% \newtoks\everypar
+% \everypar\expandafter{\the\myeverypar}
+% \myeverypar{\the\everypar\beginR}
+%
 % \newfontfamily\AcaciasHand{AcaciasHand}
 
 \setcounter{secnumdepth}{3}
