Add acknowledgement for cover design

--- a/tex/electronicsPreface.tex
+++ b/tex/electronicsPreface.tex
@@ -4,7 +4,7 @@
 
 یہ کتاب \تحریر{Ubuntu} استعمال  کرتے ہوئے \تحریر{XeLatex} میں تشکیل دی گئی۔پرزہ جات کے خط \تحریر{Octave} جبکہ ادوار کو \تحریر{gEDA} کی مدد سے بنایا گیا ہے۔ کئی ادوار پر \تحریر{GnuCap} کی مدد سے غور کیا گیا۔میں ان سافٹ ویر لکھنے والوں کا دل سے شکر گزار ہوں۔میں طلبہ و طالبات سے گزارش  کرتا ہوں کہ وہ آگے بڑھیں اور اس قسم کے سافٹ ویر لکھیں یا ان کا ترجمہ علاقائی زبانوں میں کریں۔
 
-میں یہاں ان تمام خواتین و حضرات کا شکریہ ادا کرنا چاہتا ہوں جنہوں نے اس کتاب کے مکمل کرنے میں میری مدد کی، بالخصوص کامسیٹس میں میرے ساتھی ڈاکٹر عابد مجتبےٰ جنہوں نے کتاب کی شکل نکھاری اور میرے شاگرد سید زین عباس اور حافظہ مریم اسلم جنہوں نے اس کتاب کی درستگی میں مدد کی۔
+میں یہاں ان تمام خواتین و حضرات کا شکریہ ادا کرنا چاہتا ہوں جنہوں نے اس کتاب کے مکمل کرنے میں میری مدد کی، بالخصوص کامسیٹس میں میرے ساتھی ڈاکٹر عابد مجتبےٰ جنہوں نے کتاب کی شکل نکھاری اور میرے شاگرد سید زین عباس اور حافظہ مریم اسلم جنہوں نے اس کتاب کی درستگی میں مدد کی۔ اس کتاب کی جلد کا نقشہ کامسیٹس کے طالب علموں میں ایک مقابلے کی بنیاد پر چنا گیا جس میں معصومہ علی خان کا بنایا ہوا نقشہ کتاب کی زینت بنا۔
 
 اس کتاب کی تشکیل میں ہر موڑ پر کئی کتابوں کا سہارا لیا گیا۔ ان میں مندرجہ ذیل کا ذکر ضروری ہے۔
 
