corrected urdu spelling of dot

--- a/tex/electronicsDiode.tex
+++ b/tex/electronicsDiode.tex
@@ -1170,7 +1170,7 @@ r_d =\frac{25 \times 10^{-3}}{25 \times 10^{-6}}=\SI{1000}{\ohm}
 \حصہ{طبیعیاتِ نیم موصل اشیاء}
  ڈایوڈ \موٹا{نیم موصل}\فرہنگ{نیم موصل}\فرہنگ{semiconductor}\حاشیہب{semiconductor} مواد سے بنائے جاتے ہیں۔اس حصہ میں نیم موصل اشیاء کی طبیعیات پر غور کیا جائے گا۔اگرچہ برقیاتی پرزہ جات جرمینیم یا سلیکان دونوں سے بنائے جا سکتے ہیں، حقیقت میں سلیکان کی عمدہ خوبیوں کی بدولت برقیاتی پرزہ جات زیادہ تر سلیکان سے ہی بنایا جاتا ہے۔اسی وجہ سے اس کتاب میں صرف سلیکان پر بات کی جائے گی۔
 
-کیمیائی \موٹا{دوری جدول}\فرہنگ{کیمیائی دوری جدول}\حاشیہب{periodic table}  کے چوتھے قطار یعنی چوتھے جماعت\فرہنگ{جماعت}\حاشیہب{group}  میں کاربن\عددی{\ce{C}}\حاشیہب{carbon}، سلیکان\عددی{\ce{Si}}\حاشیہب{silicon}، جرمینیم\عددی{\ce{Ge}}\حاشیہب{germanium} وغیرہ پائے جاتے ہیں۔ان تمام عناصر\حاشیہب{elements} کے ایٹمی نمونہ یا ایٹمی ماڈل\فرہنگ{ایٹمی ماڈل}\فرہنگ{atomic model}\حاشیہب{atomic model}  کے بیرونی مدار\حاشیہب{shell} میں چار الیکٹران\حاشیہب{electrons}  پائے جاتے ہیں۔یوں ان کی \موٹا{کیمیائی گرفت}\فرہنگ{کیمیائی گرفت}\فرہنگ{bond}\حاشیہب{covalent bond}  \عددی{+4}     یا \عددی{-4} ممکن ہے۔اس جماعت کے عناصر \موٹا{شریک گرفتی بند}\فرہنگ{شریک گرفتی بند}\فرہنگ{covalent bond}\حاشیہب{covalent bond}  بناتے ہیں۔
+کیمیائی \موٹا{دوری جدول}\فرہنگ{کیمیائی دوری جدول}\حاشیہب{periodic table}  کے چوتھے قطار یعنی چوتھے جماعت\فرہنگ{جماعت}\حاشیہب{group}  میں کاربن\عددی{\ce{C}}\حاشیہب{carbon}، سلیکان\عددی{\ce{Si}}\حاشیہب{silicon}، جرمینیم\عددی{\ce{Ge}}\حاشیہب{germanium} وغیرہ پائے جاتے ہیں۔ان تمام عناصر\حاشیہب{elements} کے ایٹمی نمونہ یا ایٹمی ماڈل\فرہنگ{ایٹمی ماڈل}\فرہنگ{atomic model}\حاشیہب{atomic model}  کے بیرونی مدار\حاشیہب{shell} میں چار الیکٹران\حاشیہب{electrons}  پائے جاتے ہیں۔یوں ان کی \موٹا{کیمیائی گرفت}\فرہنگ{کیمیائی گرفت}\فرہنگ{valency}\حاشیہب{valency}  \عددی{+4}     یا \عددی{-4} ممکن ہے۔اس جماعت کے عناصر \موٹا{شریک گرفتی بند}\فرہنگ{شریک گرفتی بند}\فرہنگ{covalent bond}\حاشیہب{covalent bond}  بناتے ہیں۔
 
 برقیاتی پرزہ جات بنانے کی خاطر \عددی{99.9999999} فی صد خالص سلیکان درکار ہوتا ہے جسے عموماً \موٹا{نو-نو صاف} سلیکان پکارا جاتا ہے۔اتنی خالص سلیکان حاصل کرنا از خود فنی مہارت کی انتہا ہے۔خالص سلیکان غیر موصل ہوتا ہے البتہ اس میں، نہایت باریک مقدار میں، مختلف اجزاء کی \موٹا{ملاوٹ}\فرہنگ{ملاوٹ}\فرہنگ{doping}\حاشیہب{doping}  سے اس کے \موٹا{موصلیت}\فرہنگ{موصلیت}\فرہنگ{conductance}\حاشیہب{conductance} کو تبدیل کر کے اسے موصل بنایا جا سکتا ہے۔اسی لئے سلیکان کو \موٹا{نیم موصل}\فرہنگ{نیم موصل}\حاشیہب{semiconductor}  پکارا جاتا ہے۔وزن کے لحاظ سے زمین کے بیرونی ٹھوس سطح کا \عددی{\SI{28}{\percent}} سلیکان پر مشتمل ہے۔عام ریت سلیکان اور آکسیجن کا مرکب \ce{SiO2} ہے۔
 
@@ -1185,8 +1185,8 @@ r_d =\frac{25 \times 10^{-3}}{25 \times 10^{-6}}=\SI{1000}{\ohm}
 
 شریک گرفتی بند میں قید الیکٹران اس بند کے ٹوٹنے سے آزاد ہو جاتا ہے۔بند کے ٹوٹنے سے الیکٹران خارج ہو کر آزاد منفی چارج کے طور  سلیکان میں حرکت کرتا ہے اور یوں یہ قلم کی موصلیت میں کردار ادا کرتا ہے۔اس طرح شریک گرفتی بند کی قید سے آزاد ہوا الیکٹران جو اب سلیکان میں آزادی سے حرکت کر سکتا ہو کو \موٹا{آزاد الیکٹران}\فرہنگ{آزاد!الیکٹران}\فرہنگ{free electron}\حاشیہب{free electron} یا \موٹا{متحرک الیکٹران}\فرہنگ{متحرک الیکٹران}\فرہنگ{mobile!electron}\حاشیہب{mobile electron}  کہتے ہیں۔اسی طرح شریک گرفتی بند ٹوٹنے کی وجہ سے الیکٹران کے اخراج سے اس مقام پر \موٹا{خالی خلاء} رہ جاتا ہے اور یہاں موجود سلیکان کا ایٹم مثبت چارج اختیار کر لیتا ہے۔مثبت ایٹم قریب موجود شریک گرفتی بندوں سے الیکٹران کھنچنے کی کوشش کرتا ہے اور کبھی کبھار ایسا کرنے میں کامیاب ہو جاتا ہے۔یوں اس ایٹم کا چارج دوسرے ایٹم کو منتقل ہو جاتا ہے اور ساتھ ہی ساتھ اس خلاء کا مقام بھی تبدیل ہو کر دوسرے ایٹم کے مقام پر منتقل ہو جاتا ہے۔ایسا بار بار ہونے سے خلاء مسلسل جگہ تبدیل کرتا ہے۔خلاء اور مثبت ایٹم کا مقام ایک ساتھ حرکت کرتے ہیں گویا کہ خلاء از خود مثبت چارج ہو۔یوں سلیکان میں آزادی سے حرکت کرتے مثبت خلاء کو \موٹا{آزاد خول}\فرہنگ{آزاد!خول}\فرہنگ{free hole}\حاشیہب{free hole} یا \موٹا{متحرک خول}\فرہنگ{متحرک خول}\فرہنگ{mobile!hole}\حاشیہب{mobile hole}  کہتے ہیں۔آزاد خول بالکل \موٹا{آزاد الیکٹران} کی طرح سلیکان کی موصلیت میں کردار ادا کرتا ہے۔آزاد خول کا چارج الیکٹران کے چارج کے برابر مگر مثبت ہوتا ہے۔
 
-حرارت سے \موٹا{شریک گرفتی بند} ٹوٹنے کی وجہ سے پیدا \موٹا{آزاد الیکٹران} (منفی چارج) کو \موٹا{حرارتی الیکٹران}\فرہنگ{حرارتی!الیکٹران}
-\فرہنگ{thermal!electron}\حاشیہب{thermal electron}  جبکہ اس سے پیدا \موٹا{آزاد خول} (مثبت چارج) کو \موٹا{حرارتی خول}\فرہنگ{حرارتی!خول}
+حرارت سے \موٹا{شریک گرفتی بند} ٹوٹنے کی وجہ سے پیدا \موٹا{آزاد الیکٹران} (منفی چارج) کو
+ \موٹا{حرارتی الیکٹران}\فرہنگ{حرارتی!الیکٹران}\فرہنگ{thermal!electron}\حاشیہب{thermal electron}  جبکہ اس سے پیدا \موٹا{آزاد خول} (مثبت چارج) کو \موٹا{حرارتی خول}\فرہنگ{حرارتی!خول}
 \فرہنگ{thermal!hole}\حاشیہب{thermal hole}  بھی کہتے ہیں۔چونکہ ایک شریک گرفتی بند ٹوٹنے سے ایک آزاد الیکٹران اور ایک آزاد خول وجود میں آتے ہیں لہٰذا حرارتی الیکٹران اور حرارتی خول کی تعداد ہر صورت برابر رہتی ہے۔حرارت سے پیدا الیکٹران اور خول کو \موٹا{اقلیتی الیکٹران}\فرہنگ{اقلیتی!الیکٹران}\فرہنگ{minority!electrons}\حاشیہب{minority electrons}  اور \موٹا{اقلیتی خول}\فرہنگ{اقلیتی!خول}\فرہنگ{minority!hole}\حاشیہب{minority hole}  بھی کہتے ہیں۔حرارت سے آزاد الیکٹران اور آزاد خول کے پیدائش کے عمل کو \موٹا{حرارتی پیدائش}\فرہنگ{حرارتی!پیدائش}\فرہنگ{thermal!generation}\حاشیہب{thermal generation}  کہتے ہیں۔\موٹا{حرارتی پیدائش کی شرح}\فرہنگ{حرارتی!پیدائش کی شرح}\فرہنگ{thermal!generation rate}\فرہنگ{generation rate}\حاشیہب{thermal generation rate}  کا انحصار درجہ حرارت پر ہے۔
 
 آزاد الیکٹران اور آزاد خول سلیکان میں بلا ترتیب حرکت کرتے ہیں اور ایسا کرتے ہوئے کبھی کبھار آپس میں دوبارہ جڑ جاتے ہیں۔ان کے جڑنے سے ایک آزاد الیکٹران اور ایک آزاد خول کا وجود ختم ہو جاتا ہے۔اس عمل کو \موٹا{دوبارہ جڑنا}\فرہنگ{دوبارہ!جڑنا}\فرہنگ{جڑنا!دوبارہ}\فرہنگ{recombination}\حاشیہب{recombination}  جبکہ اس کی شرح کو \موٹا{دوبارہ جڑنے کی شرح}\فرہنگ{دوبارہ!جڑنے کی شرح}\فرہنگ{جڑنا!شرح}\فرہنگ{recombination rate}\حاشیہب{recombination rate} کہتے ہیں۔
