--- a/tex/electronicsFeedback.tex
+++ b/tex/electronicsFeedback.tex
@@ -1148,16 +1148,16 @@ A_{gf}=\frac{I_o}{V_s}=\frac{\frac{V_o}{R_L}}{I_s R_s}=\left (\frac{V_o}{I_s} \r
 \caption{ٹرانزسٹر کا واپسی مزاحمت نما ایمپلیفائر}
 \label{شکل_واپسی_ٹرانزسٹر_مزاحمت_نما_ایمپلیفائر}
 \end{figure}
-شکل \حوالہ{شکل_واپسی_ٹرانزسٹر_واپسی_نکتہ} الف، ب اور پ میں شکل \حوالہ{شکل_واپسی_ٹرانزسٹر_مزاحمت_نما_ایمپلیفائر}، شکل \حوالہ{شکل_واپسی_ٹرانزسٹر_برقی_رو_ایمپلیفائر} اور شکل \حوالہ{شکل_واپسی_ٹرانزسٹر_موصلیت_نما_ایمپلیفائر} دوبارہ دکھائے گئے ہیں۔شکل  الف پر غور کریں۔اس میں خارجی دائرے کی نشاندہی کی گئی ہے۔خارجی جانب برقی دباو \عددیء{V_o} اور برقی رو \عددیء{I_o} کی بھی نشاندہی کی گئی ہے۔ٹرانزسٹر کے \عددیء{C} جہاں سے \عددیء{V_o} یا (اور) \عددیء{I_o} حاصل کیا گیا ہے کو خارجی نقطہ قرار دیا گیا ہے۔بار \عددیء{R_L} کو خارجی نقطے  پر جوڑا جاتا ہے۔اسی طرح واپسی نقطے  کی بھی نشاندہی کی گئی ہے۔یہ وہ نقطہ ہے جہاں سے واپس کار اشارہ حاصل کرتا ہے۔یہاں \عددیء{R_f} بطور واپس کار کردار ادا کر رہا ہے۔اس شکل میں واپسی نقطہ اور خارجی نقطہ دونوں ایک ہی جوڑ پر پائے جاتے ہیں۔ایسی صورت جہاں خارجی نقطہ  اور واپسی نقطہ ایک ہی جوڑ پر پائے جائیں میں واپس کار خارجی برقی دباو \عددیء{V_o} سے واپسی اشارہ حاصل کرتا ہے۔
+شکل \حوالہ{شکل_واپسی_ٹرانزسٹر_واپسی_نقطہ} الف، ب اور پ میں شکل \حوالہ{شکل_واپسی_ٹرانزسٹر_مزاحمت_نما_ایمپلیفائر}، شکل \حوالہ{شکل_واپسی_ٹرانزسٹر_برقی_رو_ایمپلیفائر} اور شکل \حوالہ{شکل_واپسی_ٹرانزسٹر_موصلیت_نما_ایمپلیفائر} دوبارہ دکھائے گئے ہیں۔شکل  الف پر غور کریں۔اس میں خارجی دائرے کی نشاندہی کی گئی ہے۔خارجی جانب برقی دباو \عددیء{V_o} اور برقی رو \عددیء{I_o} کی بھی نشاندہی کی گئی ہے۔ٹرانزسٹر کے \عددیء{C} جہاں سے \عددیء{V_o} یا (اور) \عددیء{I_o} حاصل کیا گیا ہے کو خارجی نقطہ قرار دیا گیا ہے۔بار \عددیء{R_L} کو خارجی نقطے  پر جوڑا جاتا ہے۔اسی طرح واپسی نقطے  کی بھی نشاندہی کی گئی ہے۔یہ وہ نقطہ ہے جہاں سے واپس کار اشارہ حاصل کرتا ہے۔یہاں \عددیء{R_f} بطور واپس کار کردار ادا کر رہا ہے۔اس شکل میں واپسی نقطہ اور خارجی نقطہ دونوں ایک ہی جوڑ پر پائے جاتے ہیں۔ایسی صورت جہاں خارجی نقطہ  اور واپسی نقطہ ایک ہی جوڑ پر پائے جائیں میں واپس کار خارجی برقی دباو \عددیء{V_o} سے واپسی اشارہ حاصل کرتا ہے۔
 
-شکل \حوالہ{شکل_واپسی_ٹرانزسٹر_واپسی_نکتہ} ب میں خارجی نقطہ اور واپسی نقطہ دو علیحدہ علیحدہ جوڑ پر پائے جاتے ہیں۔یوں واپسی اشارے کو اس جوڑ سے حاصل نہیں کیا گیا جہاں سے \عددیء{V_o} یا \عددیء{I_o} حاصل کیا گیا ہے۔البتہ واپسی اشارے کو خارجی دائرے سے حاصل کیا گیا ہے۔خارجی دائرہ وہ دائرہ ہے جس میں خارجی برقی رو \عددیء{I_o} کا بہاو ہوتا ہے۔ایسی صورت جہاں خارجی نقطہ  اور واپسی نقطہ دو علیحدہ علیحدہ جوڑ پر پائے جائیں میں واپس کار خارجی برقی رو \عددیء{I_o} سے واپسی اشارہ حاصل کرتا ہے۔
+شکل \حوالہ{شکل_واپسی_ٹرانزسٹر_واپسی_نقطہ} ب میں خارجی نقطہ اور واپسی نقطہ دو علیحدہ علیحدہ جوڑ پر پائے جاتے ہیں۔یوں واپسی اشارے کو اس جوڑ سے حاصل نہیں کیا گیا جہاں سے \عددیء{V_o} یا \عددیء{I_o} حاصل کیا گیا ہے۔البتہ واپسی اشارے کو خارجی دائرے سے حاصل کیا گیا ہے۔خارجی دائرہ وہ دائرہ ہے جس میں خارجی برقی رو \عددیء{I_o} کا بہاو ہوتا ہے۔ایسی صورت جہاں خارجی نقطہ  اور واپسی نقطہ دو علیحدہ علیحدہ جوڑ پر پائے جائیں میں واپس کار خارجی برقی رو \عددیء{I_o} سے واپسی اشارہ حاصل کرتا ہے۔
 
-شکل \حوالہ{شکل_واپسی_ٹرانزسٹر_واپسی_نکتہ} پ میں مزاحمت \عددیء{R_e} کو \عددیء{R_f} لکھا گیا ہے۔یہاں بھی خارجی اور واپسی نقطے دو علیحدہ علیحدہ جوڑ پر پائے جاتے ہیں لہٰذا یہاں بھی واپس کار خارجی برقی رو \عددیء{I_o} سے واپسی اشارہ حاصل کرتا ہے۔
+شکل \حوالہ{شکل_واپسی_ٹرانزسٹر_واپسی_نقطہ} پ میں مزاحمت \عددیء{R_e} کو \عددیء{R_f} لکھا گیا ہے۔یہاں بھی خارجی اور واپسی نقطے دو علیحدہ علیحدہ جوڑ پر پائے جاتے ہیں لہٰذا یہاں بھی واپس کار خارجی برقی رو \عددیء{I_o} سے واپسی اشارہ حاصل کرتا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{npnFeedbackOutputPoint}
 \caption{واپسی نقطہ}
-\label{شکل_واپسی_ٹرانزسٹر_واپسی_نکتہ}
+\label{شکل_واپسی_ٹرانزسٹر_واپسی_نقطہ}
 \end{figure}
 
 
