--- a/tex/electronicsOPAMP.tex
+++ b/tex/electronicsOPAMP.tex
@@ -219,7 +219,7 @@ R_o \approx \SI{0}{\ohm}
 خطی خطے  میں استعمال ہوتے ہوئے حسابی ایمپلیفائر  کی کارکردگی پر غور کرتے ہوئے کچھ حقائق سامنے آئے جنہیں مساوات \حوالہ{مساوات_حسابی_داخلی_سروں_پر_برابر_دباو}، \حوالہ{مساوات_حسابی_صفر_داخلی_رو} ،  \حوالہ{مساوات_حسابی_لامحدود_داخلی_مزاحمت} اور \حوالہ{مساوات_حسابی_صفر_خارجی_مزاحمت} میں بیان کیا گیا۔ان مساوات کو یہاں یکجا کر کے پیش کرتے ہیں۔
 \begin{gather} 
 \begin{aligned}\label{مساوات_حسابی_بنیادی_پہلو}
-v_2 &=v_1 \hspace{5mm} \textrm{خطہ خطی}\\
+v_2 &=v_1 \hspace{5mm} \textrm{خطی خطہ}\\
 i&=0\\
 R_i &=\infty\\
 R_o &=0
@@ -481,8 +481,8 @@ v_n=\frac{v_s R_2+v_o R_1}{R_1+R_2}
 
 آپ دیکھ سکتے ہیں کہ جب تک ایمپلیفائر خطی خطے میں رہے \عددی{v_n=v_k} رہتا ہے جبکہ غیر خطی خطے میں داخل ہوتے ہی \عددی{v_n \ne v_k} ہو جاتا ہے۔
 \begin{align}
-v_d &=0   \hspace{5mm} \textrm{خطہ خطی}\\
-v_d & \ne 0 \hspace{5mm} \textrm{خطہ خطی غیر}
+v_d &=0   \hspace{5mm} \textrm{خطی خطہ}\\
+v_d & \ne 0 \hspace{5mm} \textrm{غیر خطی خطہ}
 \end{align}
 \انتہا{مثال}
 
