--- a/tex/electronicsPreface.tex
+++ b/tex/electronicsPreface.tex
@@ -1,6 +1,6 @@
 \thispagestyle{empty}
 \باب{دیباچہ}
-برقی آلات اور عددی ادوار کے بعد مماثل برقیات میری تیسری کتاب ہے۔یہ کتاب بھی اس امید کے ساتھ لکھی گئی ہے کہ یہ ایک دن برقی انجنیئرنگ کی نسابی کتاب کے طور پر پڑھائی جائے گی۔امید کی جاتی ہے کہ اب بھی طلبہ و طالبات اس سے استفادہ حاصل کر سکیں گے۔
+برقی آلات اور عددی ادوار کے بعد مماثل برقیات میری تیسری کتاب ہے۔یہ کتاب بھی اس امید کے ساتھ لکھی گئی ہے کہ یہ ایک دن برقی انجنیئرنگ کی نصابی کتاب کے طور پر پڑھائی جائے گی۔امید کی جاتی ہے کہ اب بھی طلبہ و طالبات اس سے استفادہ حاصل کر سکیں گے۔
 
 یہ کتاب \تحریر{Ubuntu} استعمال  کرتے ہوئے \تحریر{XeLatex} میں تشکیل دی گئی۔پرزہ جات کے خط \تحریر{Octave} جبکہ ادوار کو \تحریر{gEDA} کی مدد سے بنایا گیا ہے۔ کئی ادوار پر \تحریر{GnuCap} کی مدد سے غور کیا گیا۔میں ان سافٹ ویر لکھنے والوں کا دل سے شکر گزار ہوں۔میں طلبہ و طالبات سے گزارش  کرتا ہوں کہ وہ آگے بڑھیں اور اس قسم کے سافٹ ویر لکھیں یا ان کا ترجمہ علاقائی زبانوں میں کریں۔
 
